# RepjegyNagyhazi

./: .gitignore  CMakeLists.txt  Doxyfile  FlightBook.c  FlightBook.h  FlightData.c  FlightData.h  GenericList.c  GenericList.h  ListaTest.c  README.md  Structs.h  intelligent_menu.h  main.c  menu.c  menu.h  string-utils.c  string-utils.h  strings.h  types.h
FlightData/: FlightBook.c  FlightBook.h  FlightData.c  FlightData.h  Structs.h
Menu/: intelligent_menu.c  intelligent_menu.h  menu.c  menu.h
doc/html/: GenericList_8h_source.html  annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  string-utils_8h.html  string-utils_8h_source.html  strings_8h_source.html  structGenericItem-members.html  structGenericItem.html  structGenericList-members.html  structGenericList.html  types_8h_source.html
doc/latex/: annotated.tex  files.tex  refman.tex  structGenericItem.tex  structGenericList.tex
html/: GenericList_8h.html  GenericList_8h_source.html  annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  string-utils_8h.html  string-utils_8h_source.html  strings_8h_source.html  structGenericItem-members.html  structGenericItem.html  structGenericList-members.html  structGenericList.html  types_8h_source.html
html/search/: all_2.js  all_5.js  all_6.js  classes_0.js  files_0.js  functions_2.js  searchdata.js  (+2 more)
latex/: GenericList_8h.tex  files.tex  refman.tex  string-utils_8h.tex  structGenericItem.tex  structGenericList.tex
(+9 files in other folders)
